# learnPythonCpp

./: .gitignore  README.md
useBoost/: CMakeLists.txt  a.cpp  build.sh  setup.py  导出变参函数.cpp  导出带python对象的接口.cpp  导出类.cpp
usePybind/: 001-firstBlood.cpp  001-firstBlood.py  compile.sh  conanfile.txt
usePythonH/100-hello/: a.cpp  build.sh
usePythonH/101-加法setup/: a.py  build.sh  setup.py
usePythonH/102-加法/: build.sh  build2.sh  build3.sh
usePythonH/103-cppCallPython/: a.cpp  a.py  build.sh
usePythonH/105-加法cmake/: CMakeLists.txt  a.cpp  a.py  run.sh
usePythonH/113-cppCallPython/: build2.sh
